--- a/documentation/latex/sections/milepael5/sections/countryProfiles.tex
+++ b/documentation/latex/sections/milepael5/sections/countryProfiles.tex
@@ -1,5 +1,5 @@
-\section{Socio-Economic Country Profiles (Dokumentdatabase)}
-\subsection{Første Aggregering}
+\subsection{Socio-Economic Country Profiles (Dokumentdatabase)}
+\subsubsection{Første Aggregering}
 \txt{code/milepael5/countryFirst.scala}
 
 \subsection{Andre Aggregering}
