--- a/documentation/latex/sections/milepael5/sections/graphDb.tex
+++ b/documentation/latex/sections/milepael5/sections/graphDb.tex
@@ -1,4 +1,4 @@
-\section{Government Types Of The World (Grafdatabase)}
+\subsection{Government Types Of The World (Grafdatabase)}
 
 Begynner med å lese csv filene. Merk at i dette datasettet er det 4 forskjellige csv-filer.
 
@@ -14,7 +14,7 @@ Så skrive de til parquet filer.
     \includegraphics[width=\textwidth]{images/milepael5/writeGraphDb.png}
 \end{figure}
 
-\subsection{Første Aggregering}
+\subsubsection{Første Aggregering}
 Her lagde jeg kun en aggregering, men til prosjektinnleveringen vil vi bruke de andre også. Aggregeringen viser hvordan hver styremåte har utviklet seg i popularitet gjennom årene. Den opprinnelige skissen fra milepæl 4 ser slik ut:
 
 \FigureCounter
