--- a/documentation/latex/sections/milepael5/sections/leseSkrivePar.tex
+++ b/documentation/latex/sections/milepael5/sections/leseSkrivePar.tex
@@ -1,6 +1,6 @@
-\section{Lese/Skrive CSV/Parquet filer}
+\subsection{Lese/Skrive CSV/Parquet filer}
 
 Før vi kan begynne å lage aggregeringer, må vi gjøre datasettene om til Parquet filer. Det er alltid lurt å gjøre om til Parquet først, siden de tilbyr komprimering.
 
-\subsection{Generell kode for lesing/skriving}
+\subsubsection{Generell kode for lesing/skriving}
 \txt{code/milepael5/code.scala}
