--- a/documentation/latex/sections/milepael5/sections/studentPerformance.tex
+++ b/documentation/latex/sections/milepael5/sections/studentPerformance.tex
@@ -1,10 +1,10 @@
-\section{Student Performance Dataset (KV-database)}
+\subsection{Student Performance Dataset (KV-database)}
 
-\subsection{Første Aggregering}
+\subsubsection{Første Aggregering}
 \txt{code/milepael5/agg1.scala}
 
-\subsection{Andre Aggregering}
+\subsubsection{Andre Aggregering}
 \txt{code/milepael5/agg2.scala}
 
-\subsection{Tredje Aggregering}
+\subsubsection{Tredje Aggregering}
 \txt{code/milepael5/agg3.scala}
