--- a/documentation/latex/sections/milepael6/intro.tex
+++ b/documentation/latex/sections/milepael6/intro.tex
@@ -1,8 +1,6 @@
-\section{Milepæl 6}
+\subsection{Introduksjon}
 
-\section{Introduksjon}
-
-\subsection{Brukergruppe}
+\subsubsection{Brukergruppe}
 Vår tiltenkte brukergruppe består personer som har nytte av globale studier og data til sitt arbeid som forskere, bachelor- og master-studenter, og journalister, men også folk med generell interesse for socio-økonomiske data. Hovedfokuset er å presentere hvordan forskjeller kan vise seg i områder man ikke nødvendigvis ville lagt merke til det, finne økonomiske forskjeller mellom nasjoner, og å kunne peke til regimetype som har skapt situasjonen landet står ovenfor, samt deres utdanningsmuligheter og konsekvenser.
 
 For en journalist vil det være ekstremt viktig at dataen stemmer, da det skal presenteres for et større publikum. For denne brukeren vil det ikke være veldig problematisk med ytelse, men det kan føre til at de velger en annen tjeneste, så ytelse blir viktig alikevel. Ytelsen kommer her i form av kjerne-replikering som gjør at samme data vil være tilgjengelig på flere kjerner, og skaper høyere tilgjengelighet, stabilitet, og gjør det slik at å bytte ut en feilende node er enklere.
