--- a/documentation/latex/sections/milepael6/milepael6.tex
+++ b/documentation/latex/sections/milepael6/milepael6.tex
@@ -1,3 +1,4 @@
+\section{Milepæl 6}
 \input{sections/milepael6/intro.tex}
 \input{sections/milepael6/solution/solution.tex}
 \input{sections/milepael6/alternatives.tex}
