--- a/documentation/latex/sections/milepael6/solution/joins.tex
+++ b/documentation/latex/sections/milepael6/solution/joins.tex
@@ -1,4 +1,4 @@
-\section{Slå sammen to datasett}
+\subsection{Slå sammen to datasett}
 Vi har gjort denne delen på litt forskjellige måter. I første omgang har vi hentet ut data fra en CSV-fil, laget to aggregeringer og joinet disse til én dataframe og lagt denne inn i Cassandra databasen. I den andre seksjonen har vi integrert mot neo4j med 2 datasett, og brukt MATCH for å lage koblinger i dataen.
 
 Merk at Id-ene i tabellen må ha fnutter("") for at de ikke skal bli lowercase.
@@ -10,7 +10,7 @@ Merk at Id-ene i tabellen må ha fnutter("") for at de ikke skal bli lowercase.
 Lager en Cassandra-tabell på edu.parents keyspacet
 \txt{code/milepael6/createTableForStudent.txt}
 
-\subsection{Transformering og handling}
+\subsubsection{Transformering og handling}
 Det er viktig å vite hvordan å bruke disse to forskjellige metode-typene i scala. Det viktigste er å huske at transformeringer vil forklare hva slags endringer man ønsker på hvordan data ser ut og presenteres, samt hva som hentes ut, mens handlinger vil faktisk utføre en linje kode og lagre en kopi av den ferdigbehandlede dataen. Transformeringer gjør altså ingenting før en handling kalt. Handlinger er da altså noe som vil gjøre noe med dataen, f.eks. gjøre aggregeringer eller flytte data fra et sted til et annet.
 
 Det finnes fire kategorier for transformeringer og handlinger:
@@ -32,7 +32,7 @@ Det finnes til slutt to forskjellige varianter av transformeringer: Narrow og Wi
     Illustrasjon av narrow og wide transformasjon.
 \end{figure}
 
-\subsection{Persist, broadcast og join}
+\subsubsection{Persist, broadcast og join}
 \lstinline{.persist()} brukes for å bevare en kopi av dataen på spesifisert plass lokalt i systemet. Dette gjør at det er mye mer lettvint å gjenbruke dataen, da man kun gjør nødvendige kall mot databasen/oppretter verdien én gang.
 
 \code{Scala}{code/milepael6/joinCode.scala}
@@ -47,7 +47,7 @@ Et annet bruksområde for broadcast i en join-setting er å bruke broadcast-join
 
 Grunnen til at man kan ønske å gjøre dette er ved bruk av et større og et mindre datasett, hvor man da ønsker å dele ut de mindre datasettet til hver executor. Hver executor som sitter sin seksjon av det store settet får en kopi av det lille, og kan da utføre join-handlingen betydelig mye raskere. Spark vil bruke broadcast-join automatisk dersom dataframen er under 10mb stor.
 
-\subsection{Neo4j MERGE}
+\subsubsection{Neo4j MERGE}
 Vi valgte å integrere mot Neo4j med 2 datasett og koble disse sammen.
 
 \code{Scala}{code/milepael6/graphDBcode.scala}
