--- a/documentation/latex/sections/milepael6/solution/solution.tex
+++ b/documentation/latex/sections/milepael6/solution/solution.tex
@@ -1,4 +1,4 @@
-\section{Løsning}
+\subsection{Løsning}
 
 \input{sections/milepael6/solution/san.tex}
 \input{sections/milepael6/solution/columnfamily.tex}
