--- a/documentation/latex/sections/reflection.tex
+++ b/documentation/latex/sections/reflection.tex
@@ -1,5 +1,5 @@
-\subsection{Refleksjonsnotat}
-\subsubsection{Arbeidsfordeling}
+\section{Refleksjonsnotat}
+\subsection{Arbeidsfordeling}
 Gjennom hele semesteret har begge to vært flinke til å fordele relativ lik mengde arbeid på hver milepæl. I tillegg, har vi prøvd å bytte på mellom dokumentasjon og programmering, slik at en ikke blir sittende med det samme hver gang.
 
 I milepæl 1 var det ingen programmering og her gjorde vi omtrent like mye, begge lagde skisser og dokumenterte planen vår for prosjektet. Det som er spesielt med milepæl 1, er at vi måtte omskrive hele milepælen før vi leverte inn prosjektet, siden vi hadde endret datasett. Vi gikk bort fra musikk-datasettene til studenter og sosio-økonomiske datasett den neste milepælen. Arbeidsfordelingen var lik på milepæl 2.
@@ -10,5 +10,5 @@ I milepæl 5 skulle vi innføre datasettene våres i spark. Her var det naturlig
 
 Vi gjorde ikke milepæl 7 til fristen, men her tok Mats ansvaret for å innføre datasettene i Neo4j.
 
-\subsubsection{Hvordan har gruppearbeidet fungert}
+\subsection{Hvordan har gruppearbeidet fungert}
 Gruppearbeit har fungert veldig bra. Begge to er gode venner og har god kommunikasjon med hverandre. Vi har også diskutert godt gjennom hele prosjektet og vært aktive i kurset. Det eneste å påpeke er at vi har vært litt sent ute med å begynne på hver milepæl, slik at annenhver helg går til Big Data.
