--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -2,7 +2,7 @@
 \input{preamble.tex}
 \begin{document}
 \title{Big Data - Prosjekt}
-\author{Gruppe 13: Mats Engelien, Lars Erik Faber}
+\author{Gruppe 13: Mats Engelien 192288, Lars Erik Faber 193173 }
 \date{}
 \maketitle
 \begin{center}
