fixed more \hbox issues, categorized tex files for milepæl1, minor adjustments

--- a/documentation/latex/sections/milepael1/milepael1.tex
+++ b/documentation/latex/sections/milepael1/milepael1.tex
@@ -1,1 +1,5 @@
-\input{sections/milepael1/raw.tex}
+\section{Milepæl 1}
+
+\input{sections/milepael1/intro.tex}
+\input{sections/milepael1/datasets.tex}
+\input{sections/milepael1/sketches.tex}
