Minor adjustments to milepael 2, added sources.tex

--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -22,5 +22,6 @@
 \input{sections/milepael5/milepael5.tex}
 \input{sections/milepael6/milepael6.tex}
 \input{sections/reflection.tex}
+\input{sections/sources.tex}
 
 \end{document}
