--- a/documentation/latex/sections/milepael2/milepael2.tex
+++ b/documentation/latex/sections/milepael2/milepael2.tex
@@ -1,1 +1,5 @@
-\input{sections/milepael2/raw.tex}
+\section{Milepæl 2}
+
+\input{sections/milepael2/intro.tex}
+\input{sections/milepael2/theory.tex}
+\input{sections/milepael2/dataobjects.tex}
