--- a/documentation/latex/sections/sources.tex
+++ b/documentation/latex/sections/sources.tex
@@ -1,7 +1,19 @@
-\newpage
 \section{Kilder}
-
+\subsection{Datasett}
 \begin{enumerate}
-  \item (Student Performance Dataset) \\
+  \item Student Performance Dataset \\
   https://www.kaggle.com/larsen0966/student-performance-data-set/version/
+  \item Socio-Economic Country Profiles \\
+  https://www.kaggle.com/nishanthsalian/socioeconomic-country-profiles
+  \item World University Rankings (Times Higher Education World University Ranking) \\
+  https://www.kaggle.com/mylesoneill/world-university-rankings?select=timesData.csv
+  \item Government types of the world \\
+  https://www.kaggle.com/janzasadny/rulers-elections-and-irregular-governance
 \end{enumerate}
+
+\subsection{Annet}
+\begin{enumerate}
+  \item Forsidebilde "Global Education 2015" hentet fra Newsweek.com \\
+  https://d.newsweek.com/en/full/370828/global-education-2015-550px.jpg
+\end{enumerate}
+
