--- a/documentation/latex/sections/milepael5/milepael5.tex
+++ b/documentation/latex/sections/milepael5/milepael5.tex
@@ -1,11 +1,8 @@
-\input{sections/milepael5/raw.tex}
-\input{sections/milepael5/sections/leseSkrivePar.tex}
-\input{sections/milepael5/sections/studentPerformance.tex}
+\section{Milepæl 5}
 
-\input{sections/milepael5/sections/countryProfiles.tex}
-
-\input{sections/milepael5/sections/worldUniRank.tex}
-
-\input{sections/milepael5/sections/graphDb.tex}
-
-\input{sections/milepael5/sections/hadoop.tex}
+\input{sections/milepael5/leseSkrivePar.tex}
+\input{sections/milepael5/studentPerformance.tex}
+\input{sections/milepael5/countryProfiles.tex}
+\input{sections/milepael5/worldUniRank.tex}
+\input{sections/milepael5/graphDb.tex}
+\input{sections/milepael5/hadoop.tex}
