changed code images to text in milepael5

--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -15,6 +15,7 @@
 \newpage
 \setcounter{page}{1}
 
+\input{sections/github.tex}
 \input{sections/milepael1/milepael1.tex}
 \newpage
 \input{sections/milepael2/milepael2.tex}
