--- a/documentation/latex/preamble.tex
+++ b/documentation/latex/preamble.tex
@@ -58,12 +58,17 @@
     language=Java,
     showspaces=false,
     showtabs=false,
+    aboveskip=3mm,
+    belowskip=3mm,
     breaklines=true,
     showstringspaces=false,
     breakatwhitespace=true,
+    columns=fullflexible,
+    frame=single,
     commentstyle=\color{pgreen},
     keywordstyle=\color{pblue},
     stringstyle=\color{pred},
     basicstyle=\footnotesize\ttfamily,
     moredelim=[is][\textcolor{pgrey}]{\%}{\%}
+    postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space}
 }
