--- a/documentation/latex/sections/milepael2/dataobjects.tex
+++ b/documentation/latex/sections/milepael2/dataobjects.tex
@@ -3,6 +3,7 @@ Denne seksjonen viser fram de forskjellige komponentene/dataobjektene med tilsva
 
 \subsubsection{Rådata}
 \txt{code/milepael2/rawObject.json}
+\paragraph{}
 Dette dataobjektet er en en-til-en representasjon av en rad i datasettet og representerer en student.
 
 \subsubsection{Dataobjekt 1}
