--- a/documentation/latex/sections/milepael5/sections/hadoop.tex
+++ b/documentation/latex/sections/milepael5/sections/hadoop.tex
@@ -7,7 +7,7 @@ Vi fant ut i denne milepælen at dynamisk brukerinput ville være vanskelig å i
 hadoop fs -ls hdfs:///		-rm
 
 \subsubsection{Lese fra HDFS}
-\txt{code/milepael5/hdfsRead.scala}
+\code{Scala}{code/milepael5/hdfsRead.scala}
 
 \subsubsection{Kopiere fra local til HDFS}
 
