--- a/documentation/latex/sections/milepael4/columnFamilyDesign.tex
+++ b/documentation/latex/sections/milepael4/columnFamilyDesign.tex
@@ -1,5 +1,7 @@
-\subsection{Design av Dokumentdatabase}
-Her brukte vi datasettet "World University Rankings" med Times Higher Education World University Ranking metodikken fra Kaggle: https://www.kaggle.com/mylesoneill/world-university-rankings?select=timesData.csv
+\subsection{Design av Kolonnefamiliedatabase}
+Her brukte vi datasettet "World University Rankings" med Times Higher Education World University Ranking metodikken fra Kaggle:
+
+https://www.kaggle.com/mylesoneill/world-university-rankings?select=timesData.csv
 
 \subsubsection{Begrunnelse bak valgene rundt kolonnefamilie- og grafdatabase}
 Raske queries, vi vil gjerne vite om alle skoler basert på forskjellige faktorer, og vi ønsker å gjøre det 
@@ -47,7 +49,7 @@ opprettes når ny data blir lest inn, eller når bruker legger inn selv.
 
 \FigureCounter
 \begin{figure}[H]
-  \includegraphics[scale=1]{images/milepael4/rawObject.JPG}
+  \includegraphics[width=\textwidth]{images/milepael4/rawObject.JPG}
 \end{figure}
 
 \textbf{Pseudo-Kode}
@@ -75,7 +77,7 @@ som har mest mangfoldig studentmiljø. Til slutt skal dette ha en limit på 10.
   \item Group By University
   \item Limit by 10
 \end{enumerate}
-
+\pagebreak
 % Aggregering 3 %
 \subsubsection{Average Total Score By Number Of Students}
 Dette objektet visualiserer total score innenfor hvert intervall of studentmengder. Dette kan være 
