--- a/documentation/latex/sections/milepael5/sections/countryProfiles.tex
+++ b/documentation/latex/sections/milepael5/sections/countryProfiles.tex
@@ -1,6 +1,6 @@
 \subsection{Socio-Economic Country Profiles (Dokumentdatabase)}
 \subsubsection{Første Aggregering}
-\txt{code/milepael5/countryFirst.scala}
+\code{Scala}{code/milepael5/countryFirst.scala}
 
 \subsection{Andre Aggregering}
-\txt{code/milepael5/countrySec.scala}
+\code{Scala}{code/milepael5/countrySec.scala}
