--- a/documentation/latex/sections/milepael5/sections/leseSkrivePar.tex
+++ b/documentation/latex/sections/milepael5/sections/leseSkrivePar.tex
@@ -3,4 +3,4 @@
 Før vi kan begynne å lage aggregeringer, må vi gjøre datasettene om til Parquet filer. Det er alltid lurt å gjøre om til Parquet først, siden de tilbyr komprimering.
 
 \subsubsection{Generell kode for lesing/skriving}
-\txt{code/milepael5/code.scala}
+\code{Scala}{code/milepael5/code.scala}
