--- a/documentation/latex/sections/milepael5/sections/studentPerformance.tex
+++ b/documentation/latex/sections/milepael5/sections/studentPerformance.tex
@@ -1,10 +1,10 @@
 \subsection{Student Performance Dataset (KV-database)}
 
 \subsubsection{Første Aggregering}
-\txt{code/milepael5/agg1.scala}
+\code{Scala}{code/milepael5/agg1.scala}
 
 \subsubsection{Andre Aggregering}
-\txt{code/milepael5/agg2.scala}
+\code{Scala}{code/milepael5/agg2.scala}
 
 \subsubsection{Tredje Aggregering}
-\txt{code/milepael5/agg3.scala}
+\code{Scala}{code/milepael5/agg3.scala}
