--- a/documentation/latex/sections/milepael4/documentDBImplementation.tex
+++ b/documentation/latex/sections/milepael4/documentDBImplementation.tex
@@ -1,4 +1,4 @@
-\subsection{Implementasjon av Dokumentdatabase}
+\subsection{Implementer dokumentdatabasen}
 I denne milepælen har vi implementert noen komponenter fra forrige milepæl via Scala og SBT.
 
 \subsubsection{Sammenligne kosten}
