--- a/documentation/latex/sections/milepael5/milepael5.tex
+++ b/documentation/latex/sections/milepael5/milepael5.tex
@@ -1,8 +1,4 @@
 \section{Milepæl 5}
 
-\input{sections/milepael5/leseSkrivePar.tex}
-\input{sections/milepael5/studentPerformance.tex}
-\input{sections/milepael5/countryProfiles.tex}
-\input{sections/milepael5/worldUniRank.tex}
-\input{sections/milepael5/graphDb.tex}
-\input{sections/milepael5/hadoop.tex}
+\input{sections/milepael5/sparkItUp.tex}
+\input{sections/milepael5/HDFS.tex}
