Fixed milepael 6 structure

--- a/documentation/latex/preamble.tex
+++ b/documentation/latex/preamble.tex
@@ -49,6 +49,7 @@
 \definecolor{pgreen}{rgb}{0,0.5,0}
 \definecolor{pred}{rgb}{0.9,0,0}
 \definecolor{pgrey}{rgb}{0.46,0.45,0.48}
+\definecolor{ccBorder}{HTML}{ccc9c0}
 \definecolor{ccInner}{HTML}{edf3f5}
 \definecolor{ccFrame}{HTML}{f2eee4}
 \definecolor{shadecolor}{named}{ccFrame} 
