--- a/documentation/latex/sections/milepael6/cassandra.tex
+++ b/documentation/latex/sections/milepael6/cassandra.tex
@@ -1,4 +1,11 @@
-\subsection{Kolonnefamiliedatabase}
+\subsection{Cassandra}
+
+\subsubsection{SAN vs NAS}
+Kolonnefamiliedatabasen Cassandra lagrer dataen i et filsystem kalt for \textit{shared-disk file system} som baserer seg for et \textit{Storage Area Network}(SAN) system. \textit{Network-Attached System}(NAS) derimot, er lettere å sette opp og annses på som et hjemmenettverk. Det er et filsystem som tilbyr fleksible lagringsmuligheter og er enkelt å sette opp, som er fint siden det ikke krever spesiell kompetanse innen IT.
+
+Der SAN skinner er at det er høy-ytelse og lav ventetid. Det er vanskeligere å sette opp en NAS, men siden vi leverer tjenesten har ikke dette noe å si for brukergruppen. Vi setter mye større prioritet på ventetiden, siden denne vokser vesentlig med mendgen data. Siden vi prioriterer tilgjengelighet i systemet hjelper det mye at SAN forminsker stress i et area-network, på den måten hindrer det nettverksfeil.
+
+\subsubsection{Kolonnefamiliedatabase}
 Cassandra er verktøyet vi skulle bruke for å opprette Kolonnefamiliedatabaser. Fra tidligere hadde vi allerede designet aggregeringene og laget de via spark-shell i Scala, så prossessen var heldigvis rett fram. For alle aggregeringene, inkluderende rådataen, måtte man opprette en ny table/kolonnefamilie i Cassandra med samsvarende kolonnenavn og datatype.
 
 \subsubsection{Opprette keyspace}
@@ -8,6 +15,7 @@ Det første må gjøre er å opprette et "keyspace" i Cassandra. Dette tilsvarer
 
 Replikasjonsstrategien bestemmer hvordan datakopiene distribueres rundt om i \textit{Cassandra ringen}, der en ring representerer en klynge av noder, også kalt et datasenter. Som en tommelfingelregel brukes SimpleStrategy når man bare har et datasenter, ellers brukes \textit{NetworkTopologyStrategy}. Begge strategiene populerer datasettene node for node med klokken, forskjellen er at SimpleStrategy kun populerer et datasett, mens NetworkTopologyStrategy populererer flere.
 
+\FigureCounter
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.5]{images/milepael6/replicationstrategy.drawio.png}
