--- a/documentation/latex/sections/milepael6/joins.tex
+++ b/documentation/latex/sections/milepael6/joins.tex
@@ -1,10 +1,7 @@
-\subsection{Slå sammen to datasett}
+\subsection{Slå sammen datasettene}
 Vi har gjort denne delen på litt forskjellige måter. I første omgang har vi hentet ut data fra en CSV-fil, laget to aggregeringer og joinet disse til én dataframe og lagt denne inn i Cassandra databasen. I den andre seksjonen har vi integrert mot neo4j med 2 datasett, og brukt MATCH for å lage koblinger i dataen.
 
 Merk at Id-ene i tabellen må ha fnutter("") for at de ikke skal bli lowercase.
-
-
-
 
 \large
 Lager en Cassandra-tabell på edu.parents keyspacet
