--- a/documentation/latex/sections/github.tex
+++ b/documentation/latex/sections/github.tex
@@ -1,4 +1,4 @@
-\section{GitHub}
-GitHub repoet vårt er Public og finnes her. Den inneholder alle filer relatert til Big Data prosjektet.
+\paragraph{GitHub}
+repoet vårt er Public og finnes her. Den inneholder alle filer relatert til Big Data prosjektet.
 
 Lenke til GitHub: https://github.com/larseriktf/BigData
