--- a/documentation/latex/sections/milepael1/intro.tex
+++ b/documentation/latex/sections/milepael1/intro.tex
@@ -1,4 +1,4 @@
-\subsection{Introduksjon}
-\paragraph{}
+\textbf{Introduksjon}
+
 Rapporten omhandler nettsiden vi har designet. Den tar i bruk datasett som omhandler socio-økonomiske og politiske variasjoner i samfunn, og hvordan dette påvirker både på micro og macro skala. 
 Nettsiden vil vise hva slags regimetyper som har eksistert de gjennom "moderne" tid, dette for å få et bilde av utvikling igjennom tidene. Hva slags socio-økonomisk situasjon landene står i idag, dette gir et innblikk i utvikling oppmot det internasjonale samfunn. Hvordan utdanning, økonomisk situasjon, og frihet påvirker barna i samfunnet, som identifiserer hvordan forskjeller påvirker, og til hvilken grad. Til sist ser vi på hvordan kjønnsfordelingen er ved høyere utdanningsinstitutter.
