--- a/documentation/latex/sections/milepael3/kvImplementation.tex
+++ b/documentation/latex/sections/milepael3/kvImplementation.tex
@@ -1,7 +1,15 @@
-\subsection{Implementasjon av KV-database}
-I denne milepælen har vi implementert noen komponenter fra forrige milepæl via Scala og SBT.
+\subsection{Implementer Nøkkel-verdi databasen}
+Her er implementering for noen av komponentene fra forrige milepæl via Scala og SBT.
 
-\subsubsection{Average Grades By Study Hours}
+\subsubsection{Lasting og Posting av data}
+
+\textbf{PostStudentFromCSV.scala}\\
+\code{Scala}{code/milepael3/PostStudentFromCSV.scala}
+
+\textbf{AddStudent.scala}\\
+\code{Scala}{code/milepael3/AddStudent.scala}
+
+\subsubsection{Aggregeringer}
 \textbf{PostAvgGradesByStudyHoursFromCSV.scala:}\\
 \code{Scala}{code/milepael3/PostAvgGradesByStudyHoursFromCSV.scala}
 
@@ -14,11 +22,11 @@ I denne milepælen har vi implementert noen komponenter fra forrige milepæl via
   \includegraphics[width=\textwidth]{images/milepael3/GetAvgGradesByStudyHoursTerminal.png}
 \end{figure}
 
-\subsubsection{Students By Free Time}
+
 \textbf{PostStudentsByFreeTimeFromCSV.scala}\\
 \code{Scala}{code/milepael3/PostStudentsByFreeTimeFromCSV.scala}
 
-\subsubsection{Average Grades By Parent Education}
+
 \textbf{PostAvgGradesByStudentEduFromCSV.scala}\\
 \code{Scala}{code/milepael3/PostAvgGradesByStudentEduFromCSV.scala}
 
@@ -31,9 +39,4 @@ I denne milepælen har vi implementert noen komponenter fra forrige milepæl via
   \includegraphics[width=\textwidth]{images/milepael3/GetAvgGradesByParentEduTerminal.png}
 \end{figure}
 
-\subsubsection{Student}
-\textbf{PostStudentFromCSV.scala}\\
-\code{Scala}{code/milepael3/PostStudentFromCSV.scala}
 
-\textbf{AddStudent.scala}\\
-\code{Scala}{code/milepael3/AddStudent.scala}
