--- a/documentation/latex/sections/milepael1/milepael1.tex
+++ b/documentation/latex/sections/milepael1/milepael1.tex
@@ -1,5 +1,6 @@
 \section{Milepæl 1}
-
+\subsection{Finn datasettene dere skal jobbe med.}
 \input{sections/milepael1/intro.tex}
 \input{sections/milepael1/datasets.tex}
+\subsection{Tegn skisse for en nettside}
 \input{sections/milepael1/sketches.tex}
