--- a/documentation/latex/sections/milepael2/milepael2.tex
+++ b/documentation/latex/sections/milepael2/milepael2.tex
@@ -1,5 +1,6 @@
 \section{Milepæl 2}
-
+\subsection{Design dataobjekter og aggregeringer}
 \input{sections/milepael2/intro.tex}
 \input{sections/milepael2/theory.tex}
 \input{sections/milepael2/dataobjects.tex}
+\input{sections/milepael2/theory2.tex}
